# pok

examples/aircraft/: Makefile  pok.elf  pok.elf.map  sizes.c
examples/aircraft/kernel/: deployment.h  kernel.lo  pok.lo
examples/aircraft/pr1/: Makefile  activity-sema.c  activity.c  activity.h  main.c  pr1.elf  pr1.elf.map
examples/aircraft/pr2/: pr2.elf  pr2.elf.map
examples/aircraft/timed_posix_rosace/: CMakeLists.txt  Makefile  Makefile.manual  Makefile.rtems  README.c_posix  assemblage.h  assemblage_includes.c  init.c  io.c  io.h  results_10000_to_11000_full.compact.csv  results_10000_to_11000_middle_rise.compact.csv  rosace.c  system.h  threads.c  threads.h  ts.c  ts.h
